refactor: optimize repositories with DTO projections, fix N+1 queries, and add landing page enhancements
- Add DAO layer across all domains (Controller → Service → DAO → Repository)
- Replace N+1 entity fetch+map patterns with JPQL SELECT NEW DTO projections
- Resume: unified findByCriteria replacing 7-branch if/else; findDTOById after upload
- Dashboard: rewrite from 20+ queries to ~5 using native SQL UNION ALL and correlated COUNTs
- Role: fix N+1 in getAllRolesByCriteria with batch findDistinctModulesByRoleIds
- Permission: searchByName now returns List<PermissionResponseDTO> via SELECT NEW
- NavLink: add findDTOById; fix getNavLink hardcoded "Unknown" audit names
- Landing page: add SELECT NEW projections (findActiveAsDTOs, findDTOById, findByCriteria)
  for Feature/Faq/AudienceCard/Testimonial; getPublicLandingPage uses DTO projections directly
- Add constructors to landing response DTOs for SELECT NEW compatibility

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>